# regenesis_testing

./: .gitignore  .gitmodules  Cargo.toml  run_test.sh  snapshot.json
playing_with_serde/: Cargo.toml
playing_with_serde/snapshot_generator/: generate_snapshot.sh  one_coin.json  one_contract.json  template.json
playing_with_serde/src/: main.rs
some_contract/: Forc.toml
some_contract/src/: main.sw
tests/: harness.rs
