[package]
name = "regenesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
fuels = { git = "https://github.com/FuelLabs/fuels-rs", branch = "feature/regenesis" }
tokio = { version = "1.32.0", features = ["full"] }
