[package]
name = "playing_with_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [patch.crates-io]

[dependencies]
serde = "1.0.188"
fuel-core-chain-config = { path = "/home/segfault_magnet/fuel/fuel-core/crates/chain-config" }
# fuel-tx = { version = "0.37.0", features = ["serde"] }
serde_json = "1.0.107"
